[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/ui/hourglass.png" type="Texture" id=1]
[ext_resource path="res://assets/game_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/sprites/tiles/gemYellow.png" type="Texture" id=3]
[ext_resource path="res://entities/menus/LevelComplete.gd" type="Script" id=4]

[node name="LevelComplete" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.5
margin_top = -126.0
margin_right = 233.5
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.5
margin_top = -91.5
margin_right = 93.5
margin_bottom = 91.5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 187.0
margin_bottom = 70.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_top = 17.0
margin_right = 138.0
margin_bottom = 52.0
theme = ExtResource( 2 )
text = "100"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 187.0
margin_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_top = 14.0
margin_right = 142.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "1:54"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 142.0
margin_right = 187.0
margin_bottom = 183.0
theme = ExtResource( 2 )
text = "Restart"

[connection signal="visibility_changed" from="." to="." method="_on_LevelComplete_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
